--- a/designSpec.html
+++ b/designSpec.html
@@ -7,6 +7,6 @@
 
     <div class="parent"> 
     <div id="headerrr"> <a href="index.html">DESIGN SPEC</a></div>
-    <img id="why" src="images/126 Final Design Spec.pdf" alt="design spec PDF scan">
+    <img id="why" src="chloemessineo.github.io/126 Final Design Spec.pdf" alt="design spec PDF scan">
 </div>
 </html>
