--- a/discography.html
+++ b/discography.html
@@ -21,27 +21,27 @@
 
     <div class="discContainer"> 
         <div class="item"> 
-            <img src="images/genius_of_modern_music.original.jpg" width="60%" height="60%" alt="Genius of Modern Music Cover Art"> 
+            <img src="chloemessineo.github.io/genius_of_modern_music.original.jpg" width="60%" height="60%" alt="Genius of Modern Music Cover Art"> 
             <h4> Genius of Modern Music </h4>
         </div>
         <div class="item"> 
-            <img src="images/monks_music.original.jpg" width="60%" height="60%" alt="Monk's Music Cover Art"> 
+            <img src="chloemessineo.github.io/monks_music.original.jpg" width="60%" height="60%" alt="Monk's Music Cover Art"> 
             <h4> Monk's Music </h4>  
         </div>
         <div class="item"> 
-            <img src="images/thelonious_monk_trio.original.jpg" width="60%" height="60%" alt="Thelonious Monk Trio Cover Art"> 
+            <img src="chloemessineo.github.io/thelonious_monk_trio.original.jpg" width="60%" height="60%" alt="Thelonious Monk Trio Cover Art"> 
             <h4> Thelonious Monk Trio </h4>
         </div>
         <div class="item"> 
-            <img src="images/misterioso.original.jpg" width="60%" height="60%" alt="Misterioso Cover Art">
+            <img src="chloemessineo.github.io/misterioso.original.jpg" width="60%" height="60%" alt="Misterioso Cover Art">
             <h4> Misterioso </h4>
         </div>
         <div class="item"> 
-            <img src="images/brilliant_corners.original.jpg" width="60%" height="60%" alt="Brilliant Corners Cover Art"> 
+            <img src="chloemessineo.github.io/brilliant_corners.original.jpg" width="60%" height="60%" alt="Brilliant Corners Cover Art"> 
             <h4> Brilliant Corners </h4>
         </div>
         <div class="item"> 
-            <img src="images/monks_dream.original.jpg" width="60%" height="60%" alt="Monk's Dream Cover Art"> 
+            <img src="chloemessineo.github.io/monks_dream.original.jpg" width="60%" height="60%" alt="Monk's Dream Cover Art"> 
             <h4> Monk's Dream </h4>
         </div>
     </div> 
