--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="bottomText"> <a href="#">enter record store --> </a></div>
             </div>
             
-            <div class="two"> <img src="chloemessineo-github-io/yellow.jpg" alt="Black and white collage of Monk's portraits"> </div>
+            <div class="two"> <img src="chloemessineo.github.io/yellow.jpg" alt="Black and white collage of Monk's portraits"> </div>
         </div>
 
         <footer> 
